--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,4 +22,4 @@ jobs:
         go-version: '1.23'
 
     - name: Build
-      run: go build -v cmd/cli/main.go
+      run: go build -v cmd/yesterdayI/main.go
